# tensorrt_snap

./: CMakeLists.txt  Dockerfile  README.md  trt-mxnet.py  utils.py
TensorRT-7.0.0.11/lib/: libmyelin.so.1  libnvcaffeparser.so.7.0.0  libnvinfer_plugin.so.7.0.0  libnvonnxparser.so.7  libnvparsers.so.7
opencv-3.4.2_install/include/opencv2/: cvconfig.h
opencv-3.4.2_install/lib64/: libopencv_calib3d.so.3.4.2  libopencv_features2d.so.3.4.2  libopencv_flann.so.3.4.2  libopencv_ml.so.3.4.2  libopencv_objdetect.so.3.4.2  libopencv_photo.so.3.4.2  libopencv_videostab.so.3.4.2
opencv-3.4.2_install/lib64/pkgconfig/: opencv.pc
opencv-3.4.2_install/share/OpenCV/: OpenCVConfig.cmake
sdk/: CMakeLists.txt  test.cpp
sdk/include/: argsParser.h  common.h  half.h
sdk/lib/: libmyelin.so.1.0.0  libnvcaffe_parser.so.7.0.0  libnvcaffeparser.so.7.0.0  libnvinfer.so.7.0.0  libnvonnxparser.so.7
sdk/lib/opencv/: libopencv_highgui.so.3.4.2  libopencv_imgcodecs.so.3.4  libopencv_imgproc.so.3.4.2  libopencv_video.so.3.4  libopencv_videoio.so.3.4.2
sdk/lib/opencv/lib64/: libopencv_core.so.3.4.2  libopencv_shape.so.3.4.2  libopencv_stitching.so.3.4.2  libopencv_superres.so.3.4.2
sdk/lib/opencv/share/OpenCV/: OpenCVModules-release.cmake  OpenCVModules.cmake
src/: CMakeLists.txt  model.cpp  model.h
test/: CMakeLists.txt
